vcluster/sync-resources-from-vcluster/demo-vcluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-ingress
  namespace: demo-vcluster
spec:
  ingressClassName: nginx 
  rules:
  - host: "demo.vcluster-demo.com"
    http:
      paths:
      - backend:
          service:
            name: demo-vcluster
            port: 
              number: 443
        path: /
        pathType: ImplementationSpecific
